[project]
name = "python-data-training"
version = "0.0.1"
description = "Demonstrate python and data fundamentals."
authors = [
    {name = "Robert Polski", email = "robbie.polski@zartico.com"},
]
requires-python = ">=3.11"
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
